<resources>
    <string name="app_name">MCGA</string>
    <string name="title_activity_maps">Map</string>
    <string name="toolbar_title">Campus Guide</string>
    <string name="next_class_string">Next Class</string>
    <string name="shuttle_schedule_string">Shuttle Schedule</string>
    <string name="settings_string">Settings</string>
    <string name="student_spots_string">Student Spots</string>
    <string name="about_string">About</string>
    <string name="open_drawer">Open sesame</string>
    <string name="close_drawer">Goodnight sweet prince</string>
    <string name="username">Dr. Nikolaos Tsantalis</string>
    <string name="email">nikolaos.tsantalis@concordia.ca</string>
    <string name="button_SGW">SGW</string>
    <string name="button_loyola">LOY</string>
    <string name="location_string">Location:</string>
    <string name="destination_string">Destination:</string>
    <string name="action_settings">Settings</string>
    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>
    <string name="BottomSheetBuildingInfo">com.concordia.mcga.bottomsheet.BottomSheet</string>
    <string name="my_location_string">My Location</string>

    <string name="association_asfa">asfa</string>
    <string name="association_sasu">sasu</string>
    <string name="association_space">space</string>
    <string name="association_lifting">lifting</string>
    <string name="association_hive">hive</string>
    <string name="association_csu">csu</string>
    <string name="association_ccsu">ccsu</string>
    <string name="association_scs">scs</string>

    <string name="association_jmac">jmac</string>
    <string name="association_jmiba">jmiba</string>
    <string name="association_jmma">jmma</string>
    <string name="association_jmas">jmas</string>
    <string name="association_fisa">fisa</string>
    <string name="association_jmucc">jmucc</string>
    <string name="association_jsec">jsec</string>
    <string name="association_jmsb_case_comp">jmsb_case_comp</string>

    <string name="hall_building">H</string>
    <string name="john_molson_building">JM</string>

    <string name="title_activity_credits">CreditsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="contributors">Samuel Campbell\nSylvain Czyzewski\nMihai Damaschin\nAdrianna Diaz\nArek Manoukian\nTaimoor Rana\nMark Snidal</string>
    <string name="about_MCGA">MCGA Campus Guide Application is meant to help new incoming students navigate and familiarize themselves with Concordia University - Montréal’s two campuses.</string>


</resources>
