<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.concordia.mcga.activities.CreditsActivity">


    <android.widget.RelativeLayout
        android:id="@+id/toolbarCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/creditsBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_arrow_back_white_24dp"
            android:backgroundTint="@color/white"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="90dp"
            android:includeFontPadding="false"
            android:text="@string/about_string"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </android.widget.RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_MCGA"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="14dp"/>

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/contributors"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="35dp"
            android:typeface="normal" />


    </RelativeLayout>


</LinearLayout>
